# TVC

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  settings.local.json
docs/: TVDB.md
scripts/: release.ps1  toggle-dev-mode.ps1
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_add_indexes.sql  003_add_show_metadata.sql  004_add_episode_metadata.sql  005_add_show_rating.sql  006_add_movies.sql  007_add_change_history.sql  008_add_cast_crew.sql  009_rating_to_real.sql  010_add_arr_integration.sql  011_add_rank_order.sql  012_add_racing.sql  013_add_notifications.sql  014_add_tiers.sql  015_tvdb_to_tmdb.sql  016_racing_session_feeds.sql  017_add_awards.sql  018_awards_nominations_date.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/arr/: mod.rs  models.rs  radarr.rs  sonarr.rs
src-tauri/src/awards/: db.rs  mod.rs  models.rs  scoring.rs  source.rs  sync.rs  wikipedia.rs
src-tauri/src/awards/fixtures/: emmys_60.wikitext  emmys_76.wikitext  emmys_77.wikitext  emmys_78.wikitext  oscars_86.wikitext  oscars_89.wikitext  oscars_96.wikitext  oscars_97.wikitext  oscars_99.wikitext
src-tauri/src/commands/: app.rs  arr.rs  awards.rs  backup.rs  duplicates.rs  episodes.rs  history.rs  maintenance.rs  metadata.rs  mod.rs  movies.rs  notifications.rs  plex.rs  racing.rs  shows.rs  statistics.rs  tiers.rs  validation.rs
src-tauri/src/db/: README.md  connection.rs  migration_repair.rs  mod.rs  tvdb_remap.rs
src-tauri/src/notifications/: mod.rs  models.rs
src-tauri/src/plex/: handler.rs  matcher.rs  mod.rs  models.rs
src-tauri/src/racing/: api.rs  mod.rs  models.rs  scheduler.rs
src-tauri/src/tmdb/: mod.rs
src-tauri/src/tvdb/: cache.rs  mod.rs  rate_limit.rs
src/lib/: config.ts
src/lib/components/: ArchiveManager.svelte  ArrServers.svelte  CastCrew.svelte  DataManagement.svelte  DayDetail.svelte  EpisodePicker.svelte  MigrationProgress.svelte  MovieDetail.svelte  MovieSearchModal.svelte  PlexSettings.svelte  (+12 more)
(+64 files in other folders)
